--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,99 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url(global/normalize.css);
+
+html,body{
+    height: 100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.sidebar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 100%;
+    position: fixed;
+    background-color: blueviolet;
+}
+
+.img-sidebar{
+    text-align: center;
+}
+
+.img-sidebar img{
+    width: 40%;
+    border-radius: 50%;
+    border: 4px solid #671eac;
+}
+
+.menu{
+    margin: 20px 0;
+    text-align: center;
+    position: relative;
+}
+
+.menu a{
+    color: white;
+    opacity: 0.4;
+    font-size: 19px;
+    text-decoration: none;
+    display: block;
+    margin-bottom: 20px;
+}
+
+.menu a:hover{
+    opacity: 1;
+}
+
+.content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    left: 30%;
+    width: 70%;
+    height: 100vh;
+    padding: 0 5%;
+}
+
+section.descricao{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+section.descricao h1 {
+    font-size: 3rem;
+    color: rgba(0, 0, 0, 0.863);
+}
+
+section.descricao span{
+    color: #671eac;
+}
+
+section.descricao h3{
+    color: rgba(0, 0, 0, 0.863);
+    font-size: 1rem;
+    margin: 15px 0;
+}
+
+section.descricao p{
+    color:rgba(0, 0, 0, 0.863);
+    font-size: 0.9rem;
+    margin-top: 40px;
+}
+
+.icons-social{
+    margin: 40px 0;
+    
+}
+
+.icons-social > a > img{
+    color: white;
+    background-color: rgba(128, 128, 128, 0.575);
+    border-radius: 20px;
+    width: 6%;
+    height: 8%;
+    margin-right: 30px;
+    padding: 5px;
 }
